chore: java 버전 다운그레이드 (17 -> 11) (#90)